fix: cambio color de body para tener un poco de contraste entre header y cuerpo. Añado sombra al header

--- a/styles/common.css
+++ b/styles/common.css
@@ -1,5 +1,6 @@
 :root {
     --bg-color: rgb(238, 235, 208);
+    --body-color: #F4F2D8;
     --main-text-color: #000;
     --secondary-text-color: rgb(238, 235, 208);
     --main-brand-color: rgb(250, 25, 12);
