--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,5 @@
 .main {
-    background-color: var(--bg-color);
+    background-color: var(--body-color);
     padding: 0;
     margin: 0;
 }
@@ -42,7 +42,7 @@
     display: block;
     padding: 1rem;
     margin: 0 auto;
-    background-color: var(--bg-color);
+    background-color: var(--body-color);
     border-radius: 5px;
     width: 90%;
 }
